--- a/star-wars-database-api/public/index.html
+++ b/star-wars-database-api/public/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>SW DB</title>
+    <link rel="shortcut icon" type="image/png" href="%PUBLIC_URL%/favicon.png" class="icon">
+    <title>SW DB</title>    
     <link
       rel="stylesheet"
       href="https://bootswatch.com/4/darkly/bootstrap.min.css"
